--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -55,6 +55,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatusUpdates.cs" />
     <EmbeddedResource Include="PlaneModule.resx">
       <DependentUpon>PlaneModule.cs</DependentUpon>
     </EmbeddedResource>
