--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="flightInformation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="flightInformation.Designer.cs">
+      <DependentUpon>flightInformation.cs</DependentUpon>
+    </Compile>
     <Compile Include="GeoLocation.cs" />
     <Compile Include="Plane.cs" />
     <Compile Include="PlaneModule.cs">
@@ -60,6 +66,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusUpdates.cs" />
+    <EmbeddedResource Include="flightInformation.resx">
+      <DependentUpon>flightInformation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PlaneModule.resx">
       <DependentUpon>PlaneModule.cs</DependentUpon>
     </EmbeddedResource>
