--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AGauge.dll" />
+    <Content Include="Resources\CoordinateRandomizer.txt" />
     <Content Include="Resources\flights.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
