Latitude now gets updated every 100 MS on a timer on a random number between 25 and 83 read from a txt file

--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -102,6 +102,9 @@
     <Content Include="Resources\flights.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\latitudes.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Resources\plane1-Bad-CPdoor.jpg" />
     <None Include="Resources\plane1.jpg" />
   </ItemGroup>
