--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -98,6 +98,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AGauge.dll" />
+    <Content Include="Resources\canadaFlag.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\flights.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -105,6 +108,15 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\longitudes.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Provinces.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\States.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\usaFlag.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Resources\plane1-Bad-CPdoor.jpg" />
