--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -84,6 +84,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PlaneModule.resx">
       <DependentUpon>PlaneModule.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
