Started estimated time function, pushing now to have a basis to come backl to if it gets messed up

--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -137,6 +137,7 @@
     <Content Include="Resources\tempImages\9.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\updatingEstimatedTime.txt" />
     <Content Include="Resources\weatherID.txt" />
     <Content Include="Resources\weatherImages\0.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
