Added timer functionality for current estimatd time and clock, also edited GeoLocation a bit

--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -137,7 +137,9 @@
     <Content Include="Resources\tempImages\9.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\updatingEstimatedTime.txt" />
+    <Content Include="Resources\updatingEstimatedTime.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\weatherID.txt" />
     <Content Include="Resources\weatherImages\0.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
