added tests for the longitude/latitude creation functions

--- a/GeoLocationUsedForTests/GeoLocationUsedForTests.csproj
+++ b/GeoLocationUsedForTests/GeoLocationUsedForTests.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resources\latitudes.txt" />
+    <None Remove="Resources\longitudes.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\latitudes.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\longitudes.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
