GUI changes made.

--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -108,6 +108,9 @@
     <Content Include="Resources\airpressure.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\altitudeFile.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\doors.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
