--- a/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
+++ b/Project III-Group1-Group_Project/Project III-Group1-Group_Project.csproj
@@ -129,6 +129,7 @@
     <None Include="Resources\plane1-Bad-door4.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Content Include="Resources\lockedDoor.jpg" />
     <Content Include="Resources\tempImages\0.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -159,6 +160,7 @@
     <Content Include="Resources\tempImages\9.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\unlockedDoor.jpg" />
     <Content Include="Resources\updatingEstimatedTime.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
